--- a/css/dom.css
+++ b/css/dom.css
@@ -298,11 +298,12 @@
   position: absolute;
   left: 50%;
   top: 15%;
-  transform: translate(-50%, -25%);
+  transform: translate(-50%, 0%);
   font-family: "Open Sans", sans-serif;
   font-size: 12px;
   font-weight: 400;
   text-align: center;
+  width: fit-content;
   z-index: 64;
   color: #373737;
   background-color: white;
